--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "next-themes": "^0.4.6",
+    "primereact": "^10.9.7",
+    "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
